src/objects/TOP__c.object
<CustomObject>
    <description>TOP is Treatment Outcome Profile</description>
    <fields>
        <fullName>Acute_housing_problem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accomodation items for past 30 days</inlineHelpText>
        <label>Acute housing problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alcohol_Average__c</fullName>
        <inlineHelpText>units/day</inlineHelpText>
        <label>Alcohol Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Route__c</fullName>
        <label>Alcohol Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alcohol_Total__c</fullName>
        <formula>(Alcohol_Week_1__c  +  Alcohol_Week_2__c  +  Alcohol_Week_3__c  +  Alcohol_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alcohol Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Week_1__c</fullName>
        <inlineHelpText>Number of Days substance used
Week 1 = 4 weeks ago</inlineHelpText>
        <label>Alcohol Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Week_2__c</fullName>
        <label>Alcohol Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Week_3__c</fullName>
        <label>Alcohol Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Average__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Amphetamines Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Route__c</fullName>
        <label>Amphetamines Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amphetamines_Total__c</fullName>
        <formula>(Amphetamines_Week_1__c  +Amphetamines_Week_2__c  +Amphetamines_Week_3__c  +Amphetamines_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amphetamines Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Week_1__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Amphetamines Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Week_2__c</fullName>
        <label>Amphetamines Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphetamines_Week_3__c</fullName>
        <label>Amphetamines Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_risk_of_eviction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At risk of eviction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Average__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Benzodiazepines Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Route__c</fullName>
        <label>Benzodiazepines Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Total__c</fullName>
        <formula>( Benzodiazepines_Week_1__c  +Benzodiazepines_Week_2__c + Benzodiazepines_Week_3__c  +Benzodiazepines_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benzodiazepines Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Week_1__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Benzodiazepines Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Week_2__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Benzodiazepines Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepines_Week_3__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Benzodiazepines Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Average__c</fullName>
        <inlineHelpText>spliff/day</inlineHelpText>
        <label>Cannabis Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Route__c</fullName>
        <label>Cannabis Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cannabis_Total__c</fullName>
        <formula>( Cannabis_Week_1__c + Cannabis_Week_2__c + Cannabis_Week_3__c  + Cannabis_Week_4__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cannabis Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Week_1__c</fullName>
        <inlineHelpText>spliff/day</inlineHelpText>
        <label>Cannabis Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Week_2__c</fullName>
        <label>Cannabis Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cannabis_Week_3__c</fullName>
        <label>Cannabis Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TOPs</relationshipLabel>
        <relationshipName>TOPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cocaine_Average__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Cocaine Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine_Route__c</fullName>
        <label>Cocaine Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocaine_Total__c</fullName>
        <formula>( Cocaine_Week_1__c + Cocaine_Week_2__c +Cocaine_Week_3__c +Cocaine_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cocaine Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine_Week_1__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Cocaine Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine_Week_2__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Cocaine Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine_Week_3__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Cocaine Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_assault_or_violence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed assault or violence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crack_Average__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Crack Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crack_Route__c</fullName>
        <label>Crack Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crack_Total__c</fullName>
        <formula>(Crack_Week_1__c + Crack_Week_2__c  +Crack_Week_3__c + Crack_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crack Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crack_Week_1__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Crack Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crack_Week_2__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Crack Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crack_Week_3__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Crack Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_attended_school_or_college_Total__c</fullName>
        <formula>Days_attended_school_or_college__c + Days_attended_school_or_college_Week_2__c + Days_attended_school_or_college_Week_3__c +  Days_attended_school_or_college_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days attended school or college Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_attended_school_or_college_Week_2__c</fullName>
        <label>Days attended school or college Week 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_attended_school_or_college_Week_3__c</fullName>
        <label>Days attended school or college Week 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_attended_school_or_college_Week_4__c</fullName>
        <label>Days attended school or college Week 4</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_attended_school_or_college__c</fullName>
        <label>Days attended school or college Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_had_contact_with_significant_other__c</fullName>
        <description>Number of days client had contact in the past 30 days (e.g. talked or telephone)</description>
        <inlineHelpText>Number of days client had contact in the past 30 days (e.g. talked or telephone)</inlineHelpText>
        <label>Days had contact with significant other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_paid_work_Total__c</fullName>
        <formula>Days_paid_work_Week_1__c  +  Days_paid_work_Week_2__c  +  Days_paid_work_Week_3__c  +  Days_paid_work_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days paid work Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_paid_work_Week_1__c</fullName>
        <label>Days paid work Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_paid_work_Week_2__c</fullName>
        <label>Days paid work Week 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_paid_work_Week_3__c</fullName>
        <label>Days paid work Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_where_there_was_conflict__c</fullName>
        <inlineHelpText>Number of days where there was conflict in the past 30 days (i.e. had major arguments)</inlineHelpText>
        <label>Days where there was conflict</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_Selling_Total__c</fullName>
        <formula>Drug_Selling_Week_1__c + Drug_Selling_Week_2__c  +Drug_Selling_Week_3__c  +Drug_Selling_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Selling Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_Selling_Week_1__c</fullName>
        <inlineHelpText>Number of Days Drug Selling in Week</inlineHelpText>
        <label>Drug Selling Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_Selling_Week_2__c</fullName>
        <inlineHelpText>Number of Drug Selling in Week</inlineHelpText>
        <label>Drug Selling Week 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_Selling_Week_3__c</fullName>
        <inlineHelpText>Number of Days Drug Selling in Week</inlineHelpText>
        <label>Drug Selling Week 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_Average__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Ecstasy Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_Route__c</fullName>
        <label>Ecstasy Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecstasy_Total__c</fullName>
        <formula>(Ecstasy_week1__c  +Ecstasy_Week_2__c + Ecstasy_Week_3__c  +Ecstasy_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ecstasy Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_Week_2__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Ecstasy Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_Week_3__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Ecstasy Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_Week_4__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Ecstasy Week 4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy_week1__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Ecstasy Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ever_Injected__c</fullName>
        <label>Ever Injected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_forgery_handling_stolen_goods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud, forgery, handling stolen goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Shop_Average__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Head Shop Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Shop_Route__c</fullName>
        <label>Head Shop Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_Shop_Total__c</fullName>
        <formula>( Head_Shop_Week_1__c + Head_Shop_Week_2__c  +Head_Shop_Week_3__c  +Head_Shop_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head Shop Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Shop_Week_1__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Head Shop Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Shop_Week_2__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Head Shop Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Shop_Week_3__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Head Shop Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injected_using_shared_spoon_or_filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Injected using a spoon, water or filter used by someone else</inlineHelpText>
        <label>Injected using shared spoon or filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Injected_with_shared_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Injected with needle of syringe used by someone else?</inlineHelpText>
        <label>Injected with shared needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Days_Injected_Week_1__c</fullName>
        <label>No. Days Injected Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Days_Injected_Week_2__c</fullName>
        <label>No. Days Injected Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Days_Injected_Week_3__c</fullName>
        <label>No. Days Injected Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_injected_Total__c</fullName>
        <formula>No_Days_Injected_Week_1__c  +No_Days_Injected_Week_2__c + No_Days_Injected_Week_3__c + No_Days_Injected_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days injected Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opiates_Average__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Opiates Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opiates_Route__c</fullName>
        <label>Opiates Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opiates_Total__c</fullName>
        <formula>( Opiates_Week_1__c  +  Opiates_Week_2__c  +  Opiates_Week_3__c  +  Opiates_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opiates Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opiates_Week_1__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Opiates Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opiates_Week_2__c</fullName>
        <inlineHelpText>herion, illicit methadone
g/day</inlineHelpText>
        <label>Opiates Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opiates_Week_3__c</fullName>
        <inlineHelpText>g/day</inlineHelpText>
        <label>Opiates Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_property_theft_or_burglary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other property theft or burglary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_sedatives_Average__c</fullName>
        <inlineHelpText>tablets/day</inlineHelpText>
        <label>Other sedatives Average</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_sedatives_Route__c</fullName>
        <label>Other sedatives Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = inject</fullName>
                </value>
                <value>
                    <fullName>2 = smoke</fullName>
                </value>
                <value>
                    <fullName>3 = eat/drink</fullName>
                </value>
                <value>
                    <fullName>4 = sniff/snort</fullName>
                </value>
                <value>
                    <fullName>5 = sublingual</fullName>
                </value>
                <value>
                    <fullName>6 = rectal</fullName>
                </value>
                <value>
                    <fullName>7 = topical</fullName>
                </value>
                <value>
                    <fullName>9 = not known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_sedatives_Total__c</fullName>
        <formula>(Other_sedatives_Week_1__c  +Other_sedatives_Week_2__c + Other_sedatives_Week_3__c  +Other_sedatives_Week_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other sedatives Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_sedatives_Week_1__c</fullName>
        <inlineHelpText>zimovane
tablets/day</inlineHelpText>
        <label>Other sedatives Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_sedatives_Week_2__c</fullName>
        <inlineHelpText>zimovane
tablets/day</inlineHelpText>
        <label>Other sedatives Week 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_sedatives_Week_3__c</fullName>
        <inlineHelpText>zimovane
tablets/days</inlineHelpText>
        <label>Other sedatives Week 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Quality_of_Life__c</fullName>
        <inlineHelpText>Client&apos;s rating of overall quality of life (e.g. able to enjoy life, gets on wekk with family and partner)</inlineHelpText>
        <label>Overall Quality of Life</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>